--- a/app/stylesheet/main.css
+++ b/app/stylesheet/main.css
@@ -1,10 +1,19 @@
 .main-container{
-    padding-left: 500;
-    padding-top: 80;
+    margin-left: 500;
+    margin-top: 80;
+    margin-right:0;
     background:#fff;
+    width: 25%;
+}
+
+.commentForm{
+    margin:0;
 }
 
 body{
-    background:#f5f5f5
+    background:#f5f5f5;
     
+}
+input{
+    width:100%;
 }
