--- a/app/stylesheet/main.css
+++ b/app/stylesheet/main.css
@@ -1,18 +1,37 @@
 .main-container{
-    margin-left: 500;
+    margin-left: 100;
     margin-top: 80;
     margin-right:0;
     background:#fff;
-    width: 25%;
+    width: 60%;
 }
 
 .commentForm{
     margin:0;
 }
 
-body{
-    background:#f5f5f5;
-    
+.textElementStyle{
+    border-bottom: 1px solid #ededed;
+    font-size: 24px;
+    display: block;
+    position: relative;
+    line-height: 1.4em;
+    text-align: left;
+    padding-left:10px;
+}
+
+body {
+	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	line-height: 1.4em;
+	background: #f5f5f5;
+	color: #4d4d4d;
+	min-width: 230px;
+	max-width: 550px;
+	margin: 0 auto;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+	font-weight: 300;
 }
 input{
     width:100%;
