--- a/app/stylesheet/main.css
+++ b/app/stylesheet/main.css
@@ -17,7 +17,9 @@
     position: relative;
     line-height: 1.4em;
     text-align: left;
-    padding-left:10px;
+    padding:3%;
+    min-height:40px;
+    
 }
 
 body {
