--- a/app/stylesheet/main.css
+++ b/app/stylesheet/main.css
@@ -38,3 +38,22 @@ body {
 input{
     width:100%;
 }
+
+
+
+.arrow {
+    cursor: pointer;
+    color: white;
+    border: 1px solid #AEAEAE;
+    border-radius: 30px;
+    background: #605F61;
+    font-size: 31px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;
+    float:right;
+}
+.arrow:before{
+    content: "×";
+}
